--- a/ros2_ws/src/sequencer/package.xml
+++ b/ros2_ws/src/sequencer/package.xml
@@ -8,6 +8,7 @@
   <license>TODO: License declaration</license>
 
   <depend>sequencer_itf</depend>
+  <depend>capgrasp_itf</depend>
   <depend>rclpy</depend>
 
   <test_depend>ament_copyright</test_depend>
